2010-05-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Implement tree checking.

	* tools/lib/slc/ast.py,
	* tools/lib/slc/visitors.py: Introduce a `decl' part in scopes.

	* tools/lib/slc/input/check.py: New.

	* tools/bin/spr: Use the tree checker.

	* tools/lib/Makefile.am: List the new file.

2010-05-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Introduce support for scopes, free index declarations.

	* tools/bin/cm4.in: Escape `{' and `}' to `sl_lbr' and `sl_rbr'.

	* tools/lib/t-spr/slimpl.m4,
	* tools/lib/slc/ast.py,
	* tools/lib/slc/input/parse.py: Introduce scopes and parse them.

	* tools/lib/visitors.py: Handle scopes.

	* tools/lib/slc/ast.py: Introduce node for index declarations.

	* tools/lib/slc/visitors.py,
	* tools/lib/slc/input/parse.py,
	* tools/lib/slc/lower/seq.py,
	* tools/lib/slc/mtalpha/visitors.py: Handle individual index
	declaration nodes. Simplify block handling accordingly.

	* tools/bin/spr: Move final lowering of `sl_geta' to...
	* tools/lib/slc/lower/lowgeta.py: ...here.

	* tools/lib/Makefile.am: List the new file.

2010-05-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reach prototype of the deadlock avoidance scheme.

	* tools/bin/spr: Move file reading and parsing to...

	* tools/lib/input/read.py,
	* tools/lib/input/parse.py: ...here.

	* tools/bin/spr: Move MT-Alpha visitors to...

	* tools/lib/mtalpha/visitors.py: ...here.

	* tools/lib/ast.py: Introduce flavors. Move dispatch mechanisms
	to...
	* tools/lib/visitors.py: ...here.

	* tools/lib/lower/split.py: Implement code duplication using
	flavors.

	* tools/lib/lower/seq.py: Update accordingly.

	* tools/lib/Makefile.am: List the new files.

	* tools/lib/lower/lowercreates.py: Fix typo (missing closing paren).

	* tools/bin/spr: Use the new mechanisms.

2010-05-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Refactor `spr' and introduce intermediate create lowering.

	* tools/bin/spr,
	* tools/lib/slc/ast.py: Kill definitions and uses of the
	`fid_lvalue'.
